Fixed padding of product card on tablet (May 28) #1

--- a/src/Components/ProductCard/ProductCard.scss
+++ b/src/Components/ProductCard/ProductCard.scss
@@ -174,7 +174,7 @@
 
 @media (max-width: 1024px) {
     .productcard {
-        padding: 10px;
+        padding: 10px 20px 20px 20px;
     }
 
     .productcard__info {
